Sun Apr 26 00:35:23 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/tests/thru/run_test.pl:

          Changed to add time to the run time of the client side to compensate
          for server side delay in starting repo. 

Sat Apr 24 00:00:38 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/plot-throughput-testformats.gp:
        * performance-tests/Bench/bin/plot-throughput-transports.gp:
        * performance-tests/Bench/bin/plot-throughput.gp:

          Removed plot-throughput.gp because all because graphs are made through
          the more specific plots.

        * performance-tests/Bench/doc/userguide.html:

          Updated information about changed files.

        * performance-tests/Bench/tests/latency/test_list.txt:
        * performance-tests/Bench/tests/thru/test_list.txt:

          Swapped the client and server for castor and pollux.

Fri Apr 23 20:39:23 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/CopyChainVisitor.h:
        * dds/DCPS/transport/framework/CopyChainVisitor.inl:
        * dds/DCPS/transport/framework/CopyChainVisitor.cpp:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/QueueRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/TransportQueueElement.h:
        * dds/DCPS/transport/framework/TransportQueueElement.inl:
        * dds/DCPS/transport/framework/TransportQueueElement.cpp:
        * dds/DCPS/transport/framework/TransportReplacedElement.h:
        * dds/DCPS/transport/framework/TransportReplacedElement.inl:
        * dds/DCPS/transport/framework/TransportReplacedElement.cpp:
        * dds/DCPS/transport/framework/TransportRetainedElement.h:
        * dds/DCPS/transport/framework/TransportRetainedElement.inl:
        * dds/DCPS/transport/framework/TransportSendBuffer.h:
        * dds/DCPS/transport/framework/TransportSendBuffer.cpp: