@@ -89,6 +89,21 @@ MulticastDataLink::join(const ACE_INET_Addr& group_address)
                      false);
   }
 
+  ACE_HANDLE handle = this->socket_.get_handle();
+  char ttl = this->config_->ttl_;
+
+  if (ACE_OS::setsockopt(handle,	
+                         IPPROTO_IP, 
+						 IP_MULTICAST_TTL, 
+						 &ttl, 
+						 sizeof(ttl)) < 0) {
+    ACE_ERROR_RETURN((LM_ERROR,
+                      ACE_TEXT("(%P|%t) ERROR: ")
+                      ACE_TEXT("MulticastDataLink::join: ")
+                      ACE_TEXT("ACE_OS::setsockopt TTL failed: %p\n")),
+                     false);	
+	}
+
   if (start(this->send_strategy_.in(), this->recv_strategy_.in()) != 0) {
     this->socket_.close();
     ACE_ERROR_RETURN((LM_ERROR,
