@@ -8,3 +8,4 @@ DCPSBit=0
 
 [transport_impl_3]
 transport_type=multicast
+ttl=3
